# HWDjango

./: .env.sample  data.json  pyproject.toml
blog/: models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: data_load.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_blog.py  0004_blog_slug.py  0005_delete_blog.py  0006_version.py  0007_alter_version_name_alter_version_num_version.py  0008_alter_version_options_alter_version_num_version.py  0009_alter_version_sign_alter_version_unique_together.py  0010_alter_version_num_version.py  0011_alter_version_sign.py  0012_product_creator.py  0013_product_is_active.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contact.html  index.html  product.html  product_confirm_delete.html  product_create.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  settings_local.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: creat_new.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  register.html  user_form.html
