[tool.poetry]
name = "hwdjango"
version = "0.1.0"
description = ""
authors = ["Artem Blodov <mr.samy@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
pillow = "^10.2.0"
psycopg2 = "^2.9.9"
ipython = "^8.20.0"
django-dump-load-utf8 = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
